@@ -2,17 +2,16 @@ package com.example.demo.javaprep.Stream.superEasy;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ConvertNumberToSqure {
 
-    public static void main(String[] args){
+    public static void main(String[] args) {
 
         List<Integer> numbers = new ArrayList<>();
         numbers.addAll(List.of(1, 2, 3, 4, 5, 6, 7, 7, 8, 10));
 
-        List<Integer> sqares = numbers.stream().map(a -> a * a).collect(Collectors.toList());
-         System.out.println(sqares);    }
-    
+        List<Integer> sqares = numbers.stream().map(a -> a * a).toList();
+        System.out.println(sqares);
+    }
+
 }
-    
